# aldocad

./: .gitignore  README.md
src/: CMakeLists.txt  local.cmake
src/app/: CMakeLists.txt  main.cpp
src/cmake/: utils.cmake
src/controller/: CMakeLists.txt  Facade.cpp  Facade.h
src/gui/: BSplineDialog.cpp  BSplineDialog.h  CMakeLists.txt  LineDialog.cpp  LineDialog.h  MainView.cpp  MainView.h  Object3DDialog.cpp  Object3DDialog.h  PointDialog.cpp  PointDialog.h  PolygonDialog.cpp  PolygonDialog.h  Rotate3DDialog.cpp  Rotate3DDialog.h  RotateDialog.cpp  RotateDialog.h  ScaleDialog.cpp  ScaleDialog.h  SurfaceDialog.cpp  SurfaceDialog.h  TranslateDialog.cpp  TranslateDialog.h
src/gui/ui/: BSplineDialog.ui  LineDialog.ui  MainView.ui  Object3DDialog.ui  PointDialog.ui  PolygonDialog.ui  Rotate3DDialog.ui  RotateDialog.ui  ScaleDialog.ui  SurfaceDialog.ui  TranslateDialog.ui
src/model/: BSpline.cpp  BSpline.h  CMakeLists.txt  Coordinate.h  GraphicObject.cpp  GraphicObject.h  Line.cpp  Line.h  Object3D.cpp  Object3D.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Surface.cpp  Surface.h  ViewPort.cpp  ViewPort.h  Window.cpp  Window.h  World.cpp  World.h
src/utils/: CMakeLists.txt  Clonable.h  Matrix.h  Matrix_old.h  csv.h  make_unique.h  split.h
